# isomorphism-class

./: CHANGELOG.md  build.bash  cabal.project  isomorphism-class.cabal  stack.yaml
.github/workflows/: cd.yaml  ci.yaml  format-and-test.yaml  integrate.yaml  release.yaml
test/: Main.hs
test/Test/: ExtraInstances.hs
