cabal-version: 3.0
name: isomorphism-class
version: 0.3.0.1
synopsis: Isomorphism typeclass solving the conversion problem
category: Conversion
homepage: https://github.com/nikita-volkov/isomorphism-class
bug-reports: https://github.com/nikita-volkov/isomorphism-class/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2022 Nikita Volkov
license: MIT
license-file: LICENSE
extra-source-files:
  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/nikita-volkov/isomorphism-class.git

common language-settings
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DefaultSignatures
    FlexibleContexts
    FlexibleInstances
    MagicHash
    MultiParamTypeClasses
    NoImplicitPrelude
    ScopedTypeVariables
    TypeApplications
    UndecidableSuperClasses

library
  import: language-settings
  hs-source-dirs: library
  exposed-modules: IsomorphismClass
  other-modules:
    IsomorphismClass.Classes
    IsomorphismClass.Classes.IsomorphicTo
    IsomorphismClass.Optics
    IsomorphismClass.Prelude
    IsomorphismClass.Properties
    IsomorphismClass.Relations
    IsomorphismClass.Relations.BoxedVectorAndList
    IsomorphismClass.Relations.BoxedVectorAndSeq
    IsomorphismClass.Relations.ByteArrayAndByteString
    IsomorphismClass.Relations.ByteArrayAndLazyByteString
    IsomorphismClass.Relations.ByteArrayAndLazyByteStringBuilder
    IsomorphismClass.Relations.ByteArrayAndShortByteString
    IsomorphismClass.Relations.ByteArrayAndTextArray
    IsomorphismClass.Relations.ByteArrayAndWord8List
    IsomorphismClass.Relations.ByteStringAndLazyByteString
    IsomorphismClass.Relations.ByteStringAndLazyByteStringBuilder
    IsomorphismClass.Relations.ByteStringAndShortByteString
    IsomorphismClass.Relations.ByteStringAndTextArray
    IsomorphismClass.Relations.ByteStringAndWord8List
    IsomorphismClass.Relations.Int16AndWord16
    IsomorphismClass.Relations.Int32AndWord32
    IsomorphismClass.Relations.Int64AndWord64
    IsomorphismClass.Relations.Int8AndWord8
    IsomorphismClass.Relations.IntAndWord
    IsomorphismClass.Relations.IntMapAndMapOfInt
    IsomorphismClass.Relations.IntSetAndSetOfInt
    IsomorphismClass.Relations.LazyByteStringAndLazyByteStringBuilder
    IsomorphismClass.Relations.LazyByteStringAndShortByteString
    IsomorphismClass.Relations.LazyByteStringAndTextArray
    IsomorphismClass.Relations.LazyByteStringAndWord8List
    IsomorphismClass.Relations.LazyByteStringBuilderAndShortByteString
    IsomorphismClass.Relations.LazyByteStringBuilderAndTextArray
    IsomorphismClass.Relations.LazyByteStringBuilderAndWord8List
    IsomorphismClass.Relations.LazyTextAndLazyTextBuilder
    IsomorphismClass.Relations.LazyTextAndStrictTextBuilder
    IsomorphismClass.Relations.LazyTextAndText
    IsomorphismClass.Relations.LazyTextBuilderAndStrictTextBuilder
    IsomorphismClass.Relations.LazyTextBuilderAndText
    IsomorphismClass.Relations.ListAndSeq
    IsomorphismClass.Relations.ShortByteStringAndTextArray
    IsomorphismClass.Relations.ShortByteStringAndWord8List
    IsomorphismClass.Relations.StrictTextBuilderAndText
    IsomorphismClass.Relations.TextArrayAndWord8List
    IsomorphismClass.TextCompat.Array

  build-depends:
    QuickCheck >=2.13 && <3,
    base >=4.12 && <5,
    bytestring >=0.10 && <0.13,
    containers >=0.6 && <0.8,
    hashable >=1 && <2,
    primitive >=0.7 && <0.10,
    profunctors >=5 && <6,
    text >=1.2 && <2.2,
    unordered-containers >=0.2 && <0.3,
    vector >=0.12 && <0.14,

test-suite test
  import: language-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules: Test.ExtraInstances
  build-depends:
    QuickCheck >=2.13 && <3,
    bytestring >=0.11.1.0 && <0.13,
    isomorphism-class,
    primitive >=0.7 && <0.10,
    quickcheck-instances >=0.3.32 && <0.4,
    rebase >=1.15 && <2,
    tasty >=1.2.3 && <2,
    tasty-quickcheck >=0.10.1 && <0.12,
    text >=1.2 && <3,
